fixed spacing in header and sidebar. Updated grid for content and flex box for right-sidebar

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body, h1, h2, h3, p, ul, ul li {
+body {
+    background-color: #ebeff0
+}
+
+body, h1, h2, h3, p, ul, ul li, div {
     margin: 0;
     padding: 0;
 }
@@ -30,7 +34,7 @@ img {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: clamp(200px, 20%, 250px) 4fr;
     grid-template-rows: min-content 4fr;
     grid-template-areas:
     "sidebar header"
@@ -81,9 +85,9 @@ img {
     background-color: white;
     color: black;
     grid-area: header;
-    /* box-shadow: 0 -4px 10px 2px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0 6px 6px 2px rgba(0, 0, 0, 0.2);
 
-    padding: 0 20px;
+    padding: 30px 20px 20px 20px;
 
     display: grid;
     grid-template-columns: 3fr 1.5fr;
@@ -103,11 +107,17 @@ img {
 }
 
 .search {
-    height: 2rem;
+    height: 2.2rem;
     flex-grow: 1;
-    background-color: rgb(207, 207, 207);
+    background-color: #f0eceb;
     border: none;
     border-radius: 15px;
+    padding-left: 15px;
+}
+
+.search:focus {
+    border: 2px solid #4d94ff;
+    outline: none !important;
 }
 
 .header-top-right {
@@ -116,6 +126,7 @@ img {
     display: flex;
     gap: 10px;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .header-bottom-left {
@@ -159,7 +170,7 @@ img {
 }
 
 .header-bottom-right button {
-    background-color: rgb(77, 148, 255);
+    background-color: #4d94ff;
     color: white;
     font-size: 1.2rem;
     padding: 10px 25px;
@@ -167,22 +178,36 @@ img {
     border: none;
 }
 
+.header-bottom-right button:hover {
+    background-color: #5f9fff;
+    cursor: pointer;
+}
+
+.header-bottom-right button:active {
+    background-color: #4585e6;
+    cursor: pointer;
+}
+
 .content {
-    background-color: rgb(199, 199, 199);
+    
     color: black;
     grid-area: content;
+    margin-top: 30px;
 
     display: grid;
-    grid-template-columns: 4fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 4fr minmax(400px, 1fr);
+    grid-template-rows: 1fr;
     grid-template-areas: 
-    "projects announcements"
-    "projects trending"
+    "projects right-sidebar"
 }
 
 .project-container {
     grid-area: projects;
     padding-left: 15px;
+}
+
+.project-container h2, .announcement-container h2, .trending-container h2 {
+    margin-bottom: 20px;
 }
 
 .project-list {
@@ -208,43 +233,75 @@ img {
 
 .project-card h2, .project-card p {
     padding-right: 30px;
+    padding-left: 5px;
 }
 
 .project-buttons {
     align-self: flex-end;
 }
 
+.right-sidebar {
+    grid-area: right-sidebar;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    gap: 15px;
+
+    margin-right: 30px;
+    margin-left: 20px;
+}
+
 .announcement-container {
-    grid-area: announcements;
-    padding-left: 15px;
+    
 }
 
 .announcement-list {
-    background-color: white;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 50px;
+    padding: 40px;
 }
 
 .announcement-post {
     border-bottom: 1px solid grey;
 }
 
-.announcement-list:last-child {
+
+.announcement-list:first-child {
     border-top: 1px solid grey;
     border-bottom: none;
 }
 
+.announcement-post p {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    color: #808080;
+}
+
 .trending-container {
-    grid-area: trending;
-    padding-left: 15px;
+
 }
 
 .trending-list {
-    background-color: white;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+    padding: 10px;
 }
 
+.trending-item {
+    
+}
+
+.announcement-container, .trending-container {
+
+}
+
+.announcement-list, .trending-list {
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
+}
